--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && vite build --config vite-site.config.ts",
+    "build": "tsc && rollup -c && vite build",
     "preview": "vite preview"
   },
   "exports": {
     ".": {
-      "import": "./dist/semidown.js",
-      "require": "./dist/semidown.umd.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./core": {
+      "types": "./dist/index-core.d.ts",
+      "import": "./dist/index-core.js",
+      "require": "./dist/index-core.cjs"
     }
   },
   "files": [
@@ -21,17 +27,25 @@
     "README.md",
     "CHANGELOG.md"
   ],
-  "main": "./dist/semidown.umd.cjs",
-  "module": "./dist/semidown.js",
+  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "rollup": "^4.53.3",
+    "rollup-plugin-dts": "^6.3.0",
+    "rollup-plugin-rm": "^1.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.4"
   },
   "dependencies": {
-    "@shikijs/transformers": "^3.6.0",
-    "@types/node": "^24.0.0",
-    "marked": "^15.0.12",
-    "marked-shiki": "^1.2.0",
-    "shiki": "^3.6.0"
+    "@shikijs/transformers": "^3.17.0",
+    "@types/node": "^24.10.1",
+    "marked": "^17.0.1",
+    "marked-shiki": "^1.2.1",
+    "shiki": "^3.17.0"
   }
 }
