--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
-  "name": "semidown",
+  "name": "@prantlf/semidown",
   "version": "0.0.3",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && rollup -c && vite build",
-    "preview": "vite preview"
+  "description": "Semi-incremental markdown parser and renderer, optimized for LLM output.",
+  "author": "Chuanqisun Sun <chuanqi.sun.dev@gmail.com> (https://github.com/chuanqisun)",
+  "contributors": [
+    "Ferdinand Prantl <prantlf@gmail.com> (http://prantl.tk)"
+  ],
+  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/prantlf/semidown/blob/master/LICENSE"
+    }
+  ],
+  "homepage": "http://github.com/prantlf/semidown/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prantlf/semidown.git"
   },
+  "bugs": {
+    "url": "http://github.com/prantlf/semidown/issues"
+  },
+  "type": "module",
+  "files": [
+    "dist",
+    "lib",
+    "README.md",
+    "CHANGELOG.md"
+  ],
+  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -19,17 +43,18 @@
       "require": "./dist/index-core.cjs"
     }
   },
-  "files": [
-    "dist",
-    "lib",
-    "src/main.ts",
-    "src/style.css",
-    "README.md",
-    "CHANGELOG.md"
-  ],
-  "types": "dist/index.d.ts",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && rollup -c && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@shikijs/transformers": "^3.19.0",
+    "@types/node": "^24.10.1",
+    "marked": "^17.0.1",
+    "marked-shiki": "^1.2.1",
+    "shiki": "^3.19.0"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
@@ -39,13 +64,13 @@
     "rollup-plugin-rm": "^1.0.2",
     "tslib": "^2.8.1",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.6"
   },
-  "dependencies": {
-    "@shikijs/transformers": "^3.17.0",
-    "@types/node": "^24.10.1",
-    "marked": "^17.0.1",
-    "marked-shiki": "^1.2.1",
-    "shiki": "^3.17.0"
-  }
+  "keywords": [
+    "markdown",
+    "markup",
+    "html",
+    "partial",
+    "streaming"
+  ]
 }
