--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "type": "module",
   "files": [
     "dist",
-    "lib",
-    "CHANGELOG.md"
+    "lib"
   ],
   "types": "dist/index.d.ts",
   "main": "dist/index.cjs",
@@ -48,22 +47,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@shikijs/transformers": "^3.19.0",
-    "@types/node": "^24.10.1",
+    "@shikijs/transformers": "^3.20.0",
+    "@types/node": "^25.0.3",
     "marked": "^17.0.1",
     "marked-shiki": "^1.2.1",
-    "shiki": "^3.19.0"
+    "shiki": "^3.20.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
-    "rollup": "^4.53.3",
+    "rollup": "^4.54.0",
     "rollup-plugin-dts": "^6.3.0",
     "rollup-plugin-rm": "^1.0.2",
     "tslib": "^2.8.1",
     "typescript": "~5.9.3",
-    "vite": "^7.2.6"
+    "vite": "^7.3.0"
   },
   "keywords": [
     "markdown",
