feat: Let inherited chunkers and renderers override original functionality
Change some private properties and methods of the chunkler and renderer
to protected.

Let the demo page use an extended chunker and renderer to render a chart
using CHart.js.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
+    "chart.js": "^4.5.1",
     "rollup": "^4.53.3",
     "rollup-plugin-dts": "^6.3.0",
     "rollup-plugin-rm": "^1.0.2",
