--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: pnpm/action-setup@v4
       with:
         version: latest
-    - uses: actions/setup-node@v5
+    - uses: actions/setup-node@v6
       with:
         node-version: 'lts/*'
         registry-url: 'https://registry.npmjs.org'
@@ -41,6 +41,7 @@ jobs:
       if: ${{ github.ref_name == 'master' }}
       with:
         no-archives: true
+        no-npm-auth: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/upload-pages-artifact@v3
